# 5329A2

./: A2.ipynb  EDA.py  README.md  clip_multiabel.py  dataloader.py  model.py  model_muti.py  model_text.py  predict.py  predict_multi.py  predict_text.py  pyproject.toml  submission_image.csv  submission_multi.csv  submission_text.csv  train.py  train_muti.py  train_split.csv  train_text.py  val_split.csv
